feat: finished Section.java